# revolutionary-audio-player

./: .clang-format  .clang-tidy  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README-ru.md  README.md  build.ps1  build.sh  configure  configure.ps1  index.html  install.iss  resources.qrc  sitemap.xml  strip.ps1  strip.sh
docs/: building-ru.md  building.md  linux-deps-ru.md  linux-deps.md
docs/mkdocs/: mkdocs.yml
docs/rap/: mkdocs.yml
equalizer/: index.html
playback/: index.html
playlist/: index.html
resources/: rap-logo.rc
ru/: index.html
ru/equalizer/: index.html
ru/playback/: index.html
ru/playlist/: index.html
ru/settings/: index.html
ru/spectrum-visualizer/: index.html
ru/visualizer/: index.html
settings/: index.html
spectrum-visualizer/: index.html
src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.hpp  aboutwindow.ui  aliases.hpp  audio.hpp  audiostreamer.cpp  audiostreamer.hpp  constants.hpp  customslider.cpp  customslider.h  customslider.hpp  equalizer.h  equalizer.hpp  ffmpeg.hpp  functions.hpp  indexset.h  indexset.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  musicitem.h  musicitem.hpp  progressmonitor.hpp  type_aliases.hpp
src/AboutWindow/: AboutWindow.cpp  AboutWindow.hpp  AboutWindow.ui
src/ActionButton/: ActionButton.cpp  ActionButton.hpp
src/AudioStreamer/: AudioStreamer.cpp  AudioStreamer.hpp
src/AudioWorker/: AudioWorker.cpp  AudioWorker.hpp
src/AutoUpdater/: AutoUpdater.cpp  AutoUpdater.hpp
src/CoverWindow/: CoverWindow.cpp  CoverWindow.hpp
src/CustomInput/: CustomInput.cpp  CustomInput.hpp
src/CustomSlider/: CustomSlider.cpp  CustomSlider.hpp
src/DeviceMonitor/: DeviceMonitor.cpp  DeviceMonitor.hpp  PulseAudioDeviceMonitor.cpp  PulseAudioDeviceMonitor.hpp  WindowsDeviceMonitor.cpp  WindowsDeviceMonitor.hpp
src/DockWidget/: DockWidget.cpp  DockWidget.hpp
src/DoubleValidator/: DoubleValidator.hpp
src/Duration/: Duration.cpp  Duration.hpp
src/EqualizerMenu/: EqualizerMenu.cpp  EqualizerMenu.hpp  EqualizerMenu.ui
src/HelpWindow/: HelpWindow.cpp  HelpWindow.hpp  HelpWindow.ui
src/IconTextButton/: IconTextButton.cpp  IconTextButton.hpp
src/InputPopup/: InputPopup.cpp  InputPopup.hpp
src/IntValidator/: IntValidator.hpp
src/Invalidator/: Invalidator.hpp
src/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/MetadataWindow/: MetadataWindow.cpp  MetadataWindow.hpp
src/MusicHeader/: MusicHeader.cpp  MusicHeader.hpp
src/MusicItem/: MusicItem.hpp
src/MusicModel/: MusicModel.cpp  MusicModel.hpp
src/OptionMenu/: OptionMenu.cpp  OptionMenu.hpp
src/PeakVisualizer/: PeakVisualizer.cpp  PeakVisualizer.hpp
src/PlaylistTab/: PlaylistTab.cpp  PlaylistTab.hpp
src/PlaylistTabBar/: PlaylistTabBar.cpp  PlaylistTabBar.hpp
src/PlaylistTabLabel/: PlaylistTabLabel.cpp  PlaylistTabLabel.hpp
src/PlaylistView/: PlaylistView.cpp  PlaylistView.hpp
src/ProgressLabel/: ProgressLabel.hpp
src/RangeSlider/: RangeSlider.cpp  RangeSlider.hpp
src/RepeatRangeMenu/: RepeatRangeMenu.cpp  RepeatRangeMenu.hpp
src/ScaledLabel/: ScaledLabel.hpp
src/Settings/: Settings.cpp  Settings.hpp
src/SettingsWindow/: Associations.cpp  Associations.hpp  AssociationsLinux.hpp  AssociationsLinux.inl  AssociationsMacOS.hpp  AssociationsMacOS.inl  AssociationsWindows.hpp  AssociationsWindows.inl  SettingsWindow.cpp  SettingsWindow.hpp  SettingsWindow.ui
src/SpectrumVisualizer/: SpectrumVisualizer.cpp  SpectrumVisualizer.hpp
src/TimeValidator/: TimeValidator.hpp
src/TrackRepeatMenu/: TrackRepeatMenu.cpp  TrackRepeatMenu.hpp
src/TrackTable/: TrackTable.cpp  TrackTable.hpp
src/TrackTableHeader/: TrackTableHeader.cpp  TrackTableHeader.hpp
src/TrackTableModel/: TrackTableModel.cpp  TrackTableModel.hpp
src/TrackTree/: TrackTree.cpp  TrackTree.hpp
src/TrackTreeHeader/: TrackTreeHeader.cpp  TrackTreeHeader.hpp
src/TrackTreeItem/: TrackTreeItem.hpp
src/TrackTreeModel/: TrackTreeModel.cpp  TrackTreeModel.hpp
src/Visualizer/: Visualizer.cpp  Visualizer.hpp  VisualizerDialog.cpp  VisualizerDialog.hpp  VisualizerSidecar.cpp
src/VisualizerWindow/: VisualizerWidget.cpp  VisualizerWidget.hpp  VisualizerWindow.cpp  VisualizerWindow.hpp
src/aboutwindow/: aboutwindow.cpp  aboutwindow.hpp  aboutwindow.ui
src/actionbutton/: actionbutton.cpp  actionbutton.hpp
src/audiostreamer/: audiostreamer.cpp  audiostreamer.hpp
src/audioworker/: audioworker.cpp  audioworker.hpp
src/coverwindow/: coverwindow.cpp  coverwindow.hpp
src/custominput/: custominput.cpp
src/dockwidget/: dockwidget.cpp  dockwidget.hpp
src/doublevalidator/: doublevalidator.hpp
src/equalizermenu/: equalizermenu.cpp  equalizermenu.hpp  equalizermenu.ui
src/extensions/: indexset.hpp  musicitem.hpp
src/helpwindow/: helpwindow.cpp  helpwindow.hpp  helpwindow.ui
src/icontextbutton/: icontextbutton.cpp  icontextbutton.hpp
src/intvalidator/: intvalidator.hpp
src/invalidator/: invalidator.hpp
src/mainwindow/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/metadatawindow/: metadatawindow.cpp  metadatawindow.hpp
src/musicheader/: musicheader.cpp  musicheader.hpp
src/musicitem/: musicitem.cpp  musicitem.hpp
src/musicmodel/: musicmodel.cpp  musicmodel.hpp
src/optionmenu/: optionmenu.cpp  optionmenu.hpp
src/peakvisualizer/: peakvisualizer.cpp  peakvisualizer.hpp
src/playlisttab/: playlisttab.cpp  playlisttab.hpp
src/playlisttabbar/: playlisttabbar.cpp  playlisttabbar.hpp
src/playlisttablabel/: playlisttablabel.cpp  playlisttablabel.hpp
src/playlistview/: playlistview.cpp  playlistview.hpp
src/rusty-decoder/: Cargo.toml
src/scaledlabel/: scaledlabel.hpp
src/searchinput/: custominput.cpp  custominput.hpp  searchinput.cpp  searchinput.hpp
src/settings/: settings.cpp  settings.hpp
src/settingswindow/: associationslinux.hpp  associationsmacos.hpp  associationswindows.hpp  settingswindow.cpp  settingswindow.hpp  settingswindow.ui
src/tracktree/: tracktree.cpp  tracktree.hpp
translations/: rap.en.ts  rap.ru.ts  rap_en.ts  rap_ru.ts
visualizer/: index.html
(+50 files in other folders)
